<resources>
    <string name="app_name">Đặt Lịch Sân Bóng</string>
    <string name="text_register">Vui lòng nhập số điện thoại của bạn và chọn tiếp tục để thực hiện quá trình đăng nhập và ứng dụng</string>
    <string name="text_wallet">Phương thức thanh toán STK: <i>21310000879618 Trần Minh Tiến Ngân Hàng BIDV</i></string>
    <string name="otp_verification">Xác Minh OTP</string>
    <string name="content_sendotp">Chúng tôi sẽ gửi cho bạn mã OTP dùng một lần trên số điện thoại di động này</string>
    <string name="enter_mobile_number">Nhập số điện thoại di động</string>
    <string name="login_with_email">Đăng Nhập Bằng Email</string>
    <string name="login_with_phone">Đăng Nhập Bằng Số Điện Thoại</string>
    <string name="login_no_acc">Truy Cập Không Cần Tài Khoản</string>
    <string name="hinh_thuc_dang_nhap">Lựa Chọn Hình Thức Đăng Nhập</string>
    <string name="email">Email:</string>
    <string name="mat_khau">Mật Khẩu:</string>
    <string name="quen_mk">Quên mật khẩu?</string>
    <string name="dang_nhap">Đăng Nhập</string>
    <string name="ban_chua_co_tk">Bạn chưa có tài khoản?</string>
    <string name="dk_ngay">ĐĂNG KÝ NGAY</string>
    <string name="thong_bao">Thông Báo</string>
    <string name="dong_y">Đồng Ý</string>
    <string name="noi_dung_thong_bao">Nội dung thông báo</string>
    <string name="nhap_email">Vui lòng nhập email của bạn</string>
    <string name="sai_ding_dang_email">Bạn nhập sai định dạng Email</string>
    <string name="nhap_pass">Vui lòng nhập mật khẩu của bạn</string>
    <string name="loi_call_api">Lỗi mạng hoặc lỗi hệ thống. Bạn vui lòng thử lại</string>
    <string name="tk_mk_ko_dung">Thông tin tài khoản hoặc mật khẩu không chính xác</string>
    <string name="dn_thanh_cong">Đăng nhập thành công</string>
    <string name="nhan_otp">Nhận mã OTP</string>
    <string name="nhap_sdt">Vui lòng nhập số điện thoại của bạn</string>
    <string name="sai_dinh_dang_sdt">Bạn nhập sai định dạng số điện thoại</string>
    <string name="nhan_ma_otp">Nhập mã OTP được gửi đến</string>
    <string name="chua_nhan_otp">Bạn chưa nhận được mã OTP?</string>
    <string name="gui_lai_otp">Gửi Lại Mã OTP</string>
    <string name="xac_thuc">Xác Thực</string>
    <string name="nhap_ma_otp">Vui lòng nhập mã code được gửi về máy</string>
    <string name="ma_otp_sai">Mã code đã nhập không đúng</string>
    <string name="doi_mk">Đổi mật khẩu</string>
    <string name="thong_tin_bat_buoc">Thông tin bắt buộc</string>
    <string name="email_dk_tk">Địa chỉ email đăng ký tài khoản</string>
    <string name="mk_moi">Mật Khẩu Mới</string>
    <string name="toi_thieu_6_kt">Tối thiểu 6 ký tự</string>
    <string name="nhap_lai_mk">Nhập lại mật khẩu</string>
    <string name="xac_thuc_email_truoc">Vui lòng xác thực email trước</string>
    <string name="mk_nhap_lai_ko_dung">Mật khẩu nhập lại không chính xác</string>
    <string name="aline_app">Aline - Đặt Lịch Sân Bóng Online</string>
    <string name="xin_chao">Xin chào</string>
    <string name="so_do_san">Sơ đồ sân</string>
    <string name="bang_gia_san">Bảng giá sân</string>
    <string name="thong_tin_san">Thông tin sân</string>
    <string name="ban_do">Bản đồ</string>
    <string name="danh_sach_san">Danh sách sân</string>
    <string name="tin_tuc">Tin tức</string>
    <string name="chi_tiet_san_bong">Chi Tiết Sân Bóng</string>
    <string name="luu_y_gia_san_theo_tg">Lưu ý: Giá sân được tính theo khoảng thời gian</string>
    <string name="thong_tin_chi_tiet">Thông tin chi tiết sân</string>
    <string name="dat_ngay">Đặt Ngay</string>
    <string name="can_dang_nhap">Bạn cần đăng nhập \n để tiếp tục thực hiện hành động này</string>
    <string name="chon_thoi_gian">Chọn thời gian</string>
    <string name="chon_ngay_dat_san">Vui lòng lựa chọn ngày đặt sân</string>
    <string name="thoi_gian_bd">Thời gian bắt đầu</string>
    <string name="den">Đến</string>
    <string name="thoi_gian_kt">Thời gian kết thúc</string>
    <string name="thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="nhap_ho_ten">Nhập họ tên bạn</string>
    <string name="dich_vu_khac">Dịch vụ khác</string>
    <string name="trong_tai">Trọng tài</string>
    <string name="tien_trong_tai">(150.000/1n/trận)</string>
    <string name="so_luong">số lượng</string>
    <string name="thue_ao">Thuê áo tập</string>
    <string name="tien_thue_ao">(80.000/trận)</string>
    <string name="dat_nuoc">Đặt nước</string>
    <string name="gia_tam_tinh">Giá tạm tính</string>
    <string name="da_bao_gom">(Đã bao gồm Tiền sân + tiền trọng tài + tiền áo + tiền nước)</string>
    <string name="hoan_tat">Hoàn Tất</string>
    <string name="dat_lich_san_bong">Đặt Lịch Sân Bóng</string>
    <string name="chon_ngay_dat">Vui lòng chọn ngày đặt sân</string>
    <string name="chon_thoi_gian_bd">Vui lòng lựa chọn thời gian bắt đầu</string>
    <string name="chon_thoi_gian_kt">Vui lòng lụa chọn thời gian kết thúc</string>
    <string name="chon_sl_trong_tai">Vui lòng chọn số lượng trọng tài. Nếu không bạn hãy để số lượng là 0</string>
    <string name="chon_sl_ao_thue">Vui lòng chọn số lượng áo cần thuê. Nếu không bạn hãy để số lượng là 0</string>
    <string name="chon_sl_dat_nuoc">Vui lòng chọn số lượng nước cần đặt. Nếu không bạn hãy để số lượng là 0</string>
    <string name="dang_cho">Đang chờ</string>
    <string name="da_dat">Đã đặt</string>
    <string name="da_huy">Đã hủy</string>
    <string name="da_da">Đã đá</string>
    <string name="nhap_sdt_xem_lich">Vui lòng nhập số điện thoại bạn muốn xem lịch đặt sân</string>
    <string name="dang_tai_dl">Đang tải dữ liệu. Vui lòng chờ!</string>
    <string name="noti_history">Không có dữ liệu hiển thị.\n Bạn vui lòng tới màn hình trang chủ để đặt sân hoặc nhập số điện thoại bạn muốn xem lịch</string>
    <string name="trang_chu">Trang Chủ</string>
    <string name="lich_cua_toi">Lịch Của Tôi</string>
    <string name="toi">Tôi</string>
    <string name="lich_cua_toi_tollbar">Lịch Của Tôi</string>
    <string name="ho_tro">Hỗ trợ</string>
    <string name="thong_tin_app">Thông tin ứng dụng</string>
    <string name="thong_tin_app_viet_hoa">Thông Tin Ứng Dụng</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="thong_tin_ho_tro">Thông Tin Hỗ Trợ</string>
    <string name="dia_chi">Số 1, P. Trịnh Văn Bô, Q.Nam Từ Liêm, Tp. Hà Nội</string>
    <string name="app_info_dong1">- Ứng dụng quản lý, đặt sân bóng một cách hiệu quả và chuyên nghiệp.</string>
    <string name="app_info_dong2">- Ứng dụng giúp người dùng đặt sân, các dịch vụ theo kèm nhanh chóng, đỡ tốn thời gian. Ở đó người dùng có thể biết được có bao nhiêu sân đã đặt, chưa đặt.</string>
    <string name="app_info_dong3">- Dù người dùng ở bất cứ đâu, làm gì cũng có thể xem tình trạng hoạt động của sân ngay lập tức. Từ đây người dùng không cần ra tận nơi để đặt sân trước nữa.</string>
    <string name="app_info_dong4">- Cung cấp thường xuyên các thông tin khuyến mại của sân, và còn nhiều hơn thế nữa.</string>
    <string name="app_info_dong5">- Hãy sử dụng App và bắt đầu niềm đam mê với trái bóng tròn của bạn</string>
    <string name="doi_MK">Đổi Mật Khẩu</string>
    <string name="nhap_mk_cu">Vui lòng nhập mật khẩu cũ</string>
    <string name="nhap_mk_moi">Vui lòng nhập mật khẩu mới</string>
    <string name="mk_cu">Mật khẩu cũ:</string>
    <string name="huy">Hủy</string>
    <string name="ban_muon_dang_xuat">Bạn có muốn đăng xuất không?</string>
    <string name="khong">Không</string>
    <string name="thoat">Thoát</string>
    <string name="dk_tao_tk_nd">Đăng kí tạo tài khoản Người dùng</string>
    <string name="thong_tin_dn">I. Thông tin đăng nhập</string>
    <string name="ho_ten">Họ tên</string>
    <string name="tiep_theo">Tiếp Theo</string>
    <string name="nhap_mk">Mật khẩu không được để trống</string>
    <string name="nhap_lai_mk_ko_dung">Mật khẩu nhập lại không đúng</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="dia_chi_title">Địa chỉ</string>
    <string name="nhap_dia_chi">Vui lòng cho biết địa chỉ cư chú hiện tại</string>
    <string name="tinh_thanhpho">Tỉnh/ Thành phố</string>
    <string name="quan_huyen">Quận/ Huyện</string>
    <string name="nhap_tinh_thanhpho">Vui lòng lựa chọn Tỉnh/ Thành Phố</string>
    <string name="nhap_quan_huyen">Vui lòng lựa chọn Quận/ Huyện</string>
    <string name="dong_y_dk_dieu_khoan">Đăng kí tài khoản đồng nghĩa với việc bạn đã chấp thuận các quy định của chúng tôi, đồng thời bạn cam kết các thông tin bạn cung cấp là hoàn toàn đúng với sự thật.</string>
    <string name="dang_ky">Đăng Ký</string>
    <string name="ban_da_co_tk">Bạn đã có tài khoản?</string>
    <string name="dang_nhap_ngay">ĐĂNG NHẬP NGAY</string>
    <string name="dong_y_dk_dv">Bạn vui lòng đồng ý điều khoản để đăng ký tài khoản</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="lua_chon_ngon_ngu">Lựa chọn ngôn ngữ</string>
    <string name="ds_san_dang_cho">Danh sách sân đang chờ xác nhận</string>
    <string name="ds_san_duoc_xac_nhan">Danh sách sân đã được xác nhận</string>
    <string name="ds_san_da_huy">Danh sách sân đã hủy</string>
    <string name="cam_on_dk_tk">Cảm ơn bạn đã đăng ký tài khoản tại app. Vui lòng nhập mã xác thực được gửi về email bạn đã đăng ký tài khoản</string>
    <string name="ma_xac_thuc">Mã xác thực:</string>
    <string name="nhap_ma_xac_thuc">Nhập mã xác thực</string>
    <string name="nhap_ma_otp_gui_mail">Vui lòng nhập mã OTP được gửi về Email của bạn</string>
    <string name="chuc_mung_dk_tk_thnh_cong">Chúc mừng bạn đã đăng ký thành công tài khoản tại App của chúng tôi. Mỗi ngày, bạn sẽ được nhận được thông tin các sân bóng. Bạn vui lòng đăng nhập để bắt đầu hành trình với sân cỏ của mình nào</string>
    <string name="tin_tuc_viet_hoa">Tin Tức</string>
    <string name="thong_tin_chi_tiet_tt">Thông tin chi tiết</string>
    <string name="thong_tin_ct_cua_ban">Thông tin chi tiết của bạn</string>
    <string name="tong_tien">Tổng tiền</string>
    <string name="dat_lich_thanh_cong">Đặt lịch thành công</string>
    <string name="gio">Giờ</string>
    <string name="ngay">Ngày</string>
    <string name="thoi_gian_san_da_dat">Thời gian sân đã đặt</string>
    <string name="hdsd_my_info">Hướng dẫn sử dụng</string>
    <string name="hdsd">HDSD</string>
    <string name="so_do_san_aline">Sơ đồ sân bóng Aline</string>
    <string name="moi_van_se_goi_so">Mọi vấn đề vui lòng gọi vào số:<u><i> 0981480462</i></u></string>
    <string name="so_do_san_">Sơ Đồ Sân</string>
    <string name="bang_gia_san_aline">Bảng giá sân bóng Aline</string>
    <string name="bang_gia_san_">Bảng Giá Sân</string>
    <string name="binh">bình</string>
    <string name="danh_sach_ca_dat_1_thang">Danh sách ca khách chọn trong 1 tháng</string>
    <string name="luu_y_dat_coc_san_bong">=> Lưu ý: Bạn cần đặt cọc trước, để giữ sân cho bạn. Chúng tôi sẽ liên hệ lại với bạn sớm nhất.</string>
    <string name="trang_thai">Trạng thái</string>
    <string name="ngay_dat_san">Ngày đặt sân</string>
    <string name="nhap_so_tien_thanh_toan">Vui lòng nhập số tiền thanh toán</string>
    <string name="thanh_toan">Thanh toán</string>
    <string name="thanh_toan_qua_zalo">Thanh toán qua Zalo Pay</string>
    <string name="ca_da_duoc_dat_ngay">Ca khách đã chọn trong ngày</string>
    <string name="ca_da_co_nguoi_dat">Ca đã có khách đặt. Xin vui lòng lựa chọn ca khác</string>
    <string name="ca_dat_san_het_time">Xin lỗi, ca bạn đặt đã hết thời gian trong ngày. Bạn vui lòng lựa chọn ca khác</string>
    <string name="chua_co_ca_dat">Chưa có ca đặt</string>
    <string name="ca">Ca</string>
    <string name="tong">Tổng</string>
    <string name="huy_lich_dat">Hủy Lịch Đặt</string>
    <string name="conten_huy_lich_dat">Bạn có chắc chắn muốn hủy lịch đặt sân. Mọi thông tin về lịch bạn đã đặt sẽ bị hủy?</string>
</resources>