<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo_LoginScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:src="@drawable/logo_register" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_register"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineHeight="28dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <EditText
                    android:text="tranminhtien4476@gmail.com"
                    android:textColor="@color/textGray"
                    android:id="@+id/edt_Email_LoginScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_custom_state"
                    android:hint="@string/nhap_email"
                    android:inputType="textEmailAddress"
                    android:lineHeight="28dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineHeight="28dp"
                    android:text="@string/mat_khau"
                    android:textColor="@color/black"
                    android:textSize="18dp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_pass_LoginScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:text="123456"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textGray"
                        android:background="@drawable/edittext_custom_state"
                        android:hint="@string/nhap_mk"
                        android:inputType="textPassword"
                        android:lineHeight="28dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="14dp"
                        android:paddingBottom="14dp"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvForgotPass_LoginScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="22dp"
                android:gravity="right"
                android:lineHeight="28dp"
                android:text="@string/quen_mk"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btn_Login_LoginScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/sec_radient_button"
                android:lineHeight="28dp"
                android:text="@string/dang_nhap"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_marginBottom="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvText_NoAccount_LoginScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:lineHeight="28dp"
                    android:text="@string/ban_chua_co_tk"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/tvRegisterAccount_LoginScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineHeight="28dp"
                    android:text="@string/dk_ngay"
                    android:textColor="@color/green_"
                    android:textSize="16dp" />

            </LinearLayout>

            <!--            <TextView-->
            <!--                android:id="@+id/tvLoginNoAcc"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginBottom="32dp"-->
            <!--                android:lineHeight="28dp"-->
            <!--                android:text="Đăng nhập không cần tài khoản"-->
            <!--                android:textColor="@color/red"-->
            <!--                android:textSize="16sp"-->
            <!--                android:textStyle="italic" />-->

        </LinearLayout>
    </ScrollView>


</LinearLayout>


















