<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            app:navigationIcon="@drawable/sec_ic_back"
            android:id="@+id/toolbar_ChangerPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="44dp"
            android:text="@string/mk_cu"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:hintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@android:color/transparent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassOld_ChangePass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_custom_state"
                android:hint="@string/nhap_mk_cu"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/mk_moi"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:hintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNewPass_ChangePass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_custom_state"
                android:hint="@string/toi_thieu_6_kt"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/nhap_lai_mk"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNewPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:hintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtReNewPass_ChangePass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_custom_state"
                android:hint="@string/toi_thieu_6_kt"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:paddingVertical="20dp"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btnChagePass_ChangePass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/sec_radient_button"
                android:text="@string/doi_MK"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCancel_ChangePass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_weight="1"
                android:background="@drawable/bg_buttom"
                android:text="@string/huy"
                android:textAllCaps="false"
                android:textColor="@color/green_"
                android:textSize="16sp"
                tools:targetApi="lollipop" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>